09-11-2014: 
- Adição da funcionalidade para evitar duplicação de registro no momento da edição.
- Adição da propriedade field_pk na classe controller e como parâmeetro do construtor da classe